@@ -5,6 +5,9 @@
 
 #  define TIFFInitJPEG TIFFInitJPEG_12
 
+int
+TIFFInitJPEG_12(TIFF* tif, int scheme);
+
 #  include LIBJPEG_12_PATH
 
 #  include "tif_jpeg.c"
